--- a/catalog_page.html
+++ b/catalog_page.html
@@ -160,9 +160,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -197,9 +199,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -234,9 +238,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -271,9 +277,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -308,9 +316,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -345,9 +355,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
