--- a/index.html
+++ b/index.html
@@ -355,9 +355,11 @@
                      <div class="num">1</div>
                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                    </div>
-                   <a href="#" class="buy-link primary-link">
-                     В корзину
-                   </a>
+                   <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                   </form>
                  </div>
                  <!-- /.product-buy -->
                 </div>
@@ -392,9 +394,11 @@
                     <div class="num">1</div>
                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                   </div>
-                  <a href="#" class="buy-link primary-link">
-                    В корзину
-                  </a>
+                  <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                  </form>
                 </div>
                 <!-- /.product-buy -->
                 </div>
@@ -429,9 +433,11 @@
                     <div class="num">1</div>
                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
                   </div>
-                  <a href="#" class="buy-link primary-link">
-                    В корзину
-                  </a>
+                  <form>
+                    <a href="#" class="buy-link primary-link">
+                      В корзину
+                    </a>
+                  </form>
                 </div>
                 <!-- /.product-buy -->
                 </div>
