--- a/product.html
+++ b/product.html
@@ -135,9 +135,11 @@
             <div class="num">1</div>
             <div class="plus pr"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
           </div>
-          <a href="#" class="pr-buy-link buy-link primary-link">
-            В корзину
-          </a>
+          <form>
+            <a href="#" class="pr-buy-link buy-link primary-link">
+              В корзину
+            </a>
+          </form>
         </div>
         <!-- /.product-buy -->
           </div>
