--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jazz</title>
+  <title>Каталог</title>
+  <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
