--- a/catalog_page.html
+++ b/catalog_page.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
-  <link rel="stylesheet" href="/images/noui-slider/nouislider.min.css">
   <link rel="stylesheet" href="/images/css/main.css">
   <script src="/images/fancybox/fancybox.umd.js" defer></script>
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
-  <script src="/images/noui-slider/nouislider.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
 </head>
 <body>
