--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jazz</title>
   <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/images/bootstrap/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/images/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/css/fonts.css">
@@ -509,7 +510,7 @@
                 <div class="success-card">
                   <img src="/images/img/success-icon-1.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Совершайте любые покупки в Jazz-Holding со скидкой</p>
-                  <span class="order-num">01</span>
+                  <span class="success-card-num">01</span>
                 </div>
                 <!-- /.success-card -->    
               </div>
@@ -518,7 +519,7 @@
                 <div class="success-card">
                   <img src="/images/img/success-icon-2.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Рекомендуйте Jazz-Holding, создавая личную команду активных потребителей</p>
-                  <span class="order-num">02</span>
+                  <span class="success-card-num">02</span>
                 </div>
                 <!-- /.success-card -->
               </div>
@@ -528,7 +529,7 @@
                   <img src="/images/img/success-icon-3.svg" alt="Icon: Success-icon" class="js-svg-img success-card-img">
                   <p class="success-text">Станьте Экспертом бренда, получая пассивный доход и щедрые подарки
                   </p>
-                  <span class="order-num">03</span>
+                  <span class="success-card-num">03</span>
                 </div>
                 <!-- /.success-card -->
               </div>
