--- a/product.html
+++ b/product.html
@@ -102,8 +102,8 @@
           <div class="product-wrapper">
           <form action="" class="link-form">
             <span class="referral-link-title">Ваша реферальная ссылка:</span>
-            <input type="text" class="referral-link" placeholder="https://columns.app/devarto-ru/valera-6f9">
-            <div class="copy-icon">
+            <input type="text" id="js-text" class="referral-link" readonly="readonly" value="https://columns.app/devarto-ru/valera-6f9">
+            <div class="copy-icon" id="js-copy">
               <img src="/images/img/copy.svg" alt="Icon: copy" class="js-svg-img">              
             </div>
           </form>
