--- a/cart.html
+++ b/cart.html
@@ -162,7 +162,7 @@
       <br/>
       <div class="row justify-content-end">
         <div class="col-md-3">
-          <a href="#" class="buy-link ct-link primary-link">Продолжить</a>
+          <a href="/order.html" class="buy-link ct-link primary-link">Продолжить</a>
         </div>
         <!-- /.col-md-3 -->
       </div>
