--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
                   Войти
                 </a>
-                <a href = "#" class="cart-link">
+                <a href = "/cart.html" class="cart-link">
                   <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                   <span class="products-num">3</span>
                 </a>
