--- a/product.html
+++ b/product.html
@@ -11,11 +11,14 @@
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/noui-slider/nouislider.min.css">
   <link rel="stylesheet" href="/images/css/fonts.css">
+  <link rel="stylesheet" href="/images/slick-js/slick.css">
+  <link rel="stylesheet" href="/images/slick-js/slick-theme.css">
   <link rel="stylesheet" href="/images/css/main.css">
   <script src="/images/fancybox/fancybox.umd.js" defer></script>
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/noui-slider/nouislider.min.js" defer></script>
+  <script src="/images/slick-js/slick.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
 </head>
 <body>
@@ -48,7 +51,7 @@
                   <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
                   Войти
                 </a>
-                <a href = "#" class="cart-link">
+                <a href = "/cart.html" class="cart-link">
                   <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
                   <span class="products-num">3</span>
                 </a>
@@ -82,9 +85,58 @@
       <div class="row">
         <div class="col-md-6">
           <div class="product-image-wrapper">
-            <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+            <div class="img-slider">
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
+              <div class="slide">
+                <img src="/images/img/product-image.png" alt="Image: product" class="product-image">
+              </div>
+              <!-- /.slide -->
+            </div>
+            <!-- /.img-slider -->
           </div>
           <!-- /.product-image-wrapper -->
+          <div class="second-slider">
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
+            <div class="second-slider-item">
+              <div class="item-wrapper">
+                <img src="/images/img/second-slider-item.png" alt="Slider-image" class="item-img">
+              </div>
+              <!-- /.item-wrapper -->
+            </div>
+            <!-- /.second-slider-item -->
+          </div>
+          <!-- /.second-slider -->
         </div>
         <!-- /.col-md-6 -->
         <div class="col-md-6">
