--- a/catalog_page.html
+++ b/catalog_page.html
@@ -11,11 +11,14 @@
   <link rel="stylesheet" href="/images/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="/images/noui-slider/nouislider.min.css">
   <link rel="stylesheet" href="/images/css/fonts.css">
+  <link rel="stylesheet" href="/images/slick-js/slick.css">
+  <link rel="stylesheet" href="/images/slick-js/slick-theme.css">
   <link rel="stylesheet" href="/images/css/main.css">
   <script src="/images/fancybox/fancybox.umd.js" defer></script>
   <script src="/images/swiper/swiper-bundle.min.js" defer></script>
   <script src="/images/jquery-ui/jquery-3.6.0.min.js" defer></script>
   <script src="/images/noui-slider/nouislider.min.js" defer></script>
+  <script src="/images/slick-js/slick.min.js" defer></script>
   <script src="/images/js/main.js" defer></script>
 </head>
 <body>
@@ -85,12 +88,12 @@
         <div class="col-md-4">
           <div class="sidebar">
             <div class="sidebar-box sidebar-search">
-              <a href="" class="sidebar-btn js-search-btn">
+              <div class="sidebar-btn js-search-btn">
                 <span class="sidebar-text">Поиск</span>
-                <div class="sidebar-arrow sidebar-search-arrow">
+                <div class="sidebar-arrow js-search-arrow sidebar-search-arrow">
                   <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
                 </div>
-              </a>
+              </div>
               <!-- /.sidebar-btn -->
               <hr class="sidebar-line"> 
               <form class="sidebar-form js-search-form">
@@ -102,12 +105,12 @@
             </div>
             <!-- /.sidebar-box -->
             <div class="sidebar-box sidebar-price">
-              <a href="" class="sidebar-btn js-price-btn">
+              <div class="sidebar-btn js-price-btn">
                 <span class="sidebar-text">Цена (руб.)</span>
-                <div class="sidebar-arrow sidebar-price-arrow">
+                <div class="sidebar-arrow js-price-arrow sidebar-price-arrow">
                   <img src="/images/img/arrow.svg" alt="Icon: arrow" class="js-svg-img">
                 </div>
-              </a>
+              </div>
               <!-- /.sidebar-btn -->
               <hr class="sidebar-line"> 
               <form class="sidebar-form js-price-form">
@@ -156,15 +159,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
@@ -195,15 +198,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
@@ -234,15 +237,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
@@ -273,15 +276,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
@@ -312,15 +315,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
@@ -351,15 +354,15 @@
                  <div class="product-buy">
                    <span class="price-text">Цена:</span>
                    <span class="price">4 400.00 ₽</span>
-                   <div class="amount">
-                     <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
-                     <div class="num">1</div>
-                     <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
-                   </div>
-                   <form>
-                    <a href="#" class="buy-link primary-link">
+                   <form class="buy-form">
+                    <div class="amount">
+                      <div class="minus"><img src="/images/img/minus-icon.svg" alt="Icon: Minus" class="js-svg-img"></div>
+                      <div class="num">1</div>
+                      <div class="plus"><img src="/images/img/plus-icon.svg" alt="Icon: Plus" class="js-svg-img"></div>
+                    </div>
+                    <button class="buy-link primary-link">
                       В корзину
-                    </a>
+                    </button>
                    </form>
                  </div>
                  <!-- /.product-buy -->
