--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="header-fixed">
         <div class="container">
           <div class="row">
-            <div class="col-md-2 col-sm-3">
+            <div class="col-md-2 col-sm-3 col-3">
               <a href="/" class="logo">
                 <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-             <div class="col-md-8 col-sm-3">
+             <div class="col-md-8 col">
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
@@ -46,7 +46,7 @@
               </nav>
               </div>
               <!-- /.col-md-8 -->
-              <div class="col-md-2 col-sm-6">
+              <div class="col-md-2 col-sm-6 col-7">
                 <div class="link-group">
                   <a href = "#" class="user-link primary-link">
                     <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img user-icon">
@@ -78,7 +78,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6 col-12">
                     <div class="banner-content">
                       <h1 class="banner-title">Santos Coffee BR</h1>
                       <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -120,7 +120,7 @@
               <!-- /.swiper-slide -->
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6 col-12">
                     <div class="banner-content">
                       <h1 class="banner-title">Santos Coffee BR</h1>
                       <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
@@ -162,7 +162,7 @@
               <!-- /.swiper-slide -->
               <div class="swiper-slide">
                 <div class="row">
-                  <div class="col-md-6 col-sm-6">
+                  <div class="col-md-6 col-sm-6 col-12">
                     <div class="banner-content">
                       <h1 class="banner-title">Santos Coffee BR</h1>
                       <h2 class="banner-subtitle">Свежеобжаренный кофе</h2>
