--- a/order.html
+++ b/order.html
@@ -27,15 +27,15 @@
       <div class="header-fixed">
         <div class="container">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 col-sm-3">
               <a href="/" class="logo">
                 <img src="/images/img/logo.png" alt="Logo: Jazz" class="logo-image" />
               </a>
             </div>
-             <div class="col-md-8">
+             <div class="col-md-8 col-sm-3">
               <nav class="nav-menu">
                 <ul class="nav-list">
-                  <li class="nav-item"><a href="/" class="nav-link">Главная</a></li>
+                  <li class="nav-item"><a href="#" class="nav-link">Главная</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О нас</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">О продукции</a></li>
                   <li class="nav-item"><a href="/catalog.html" class="nav-link">Магазин</a></li>
@@ -44,27 +44,32 @@
                   <li class="nav-item"><a href="#" class="nav-link">Продукция</a></li>
                 </ul>
               </nav>
-             </div>
-            <div class="col-md-2">
-              <div class="link-group">
-                <a href = "#" class="user-link primary-link">
-                  <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img">
-                  Войти
-                </a>
-                <a href = "#" class="cart-link">
-                  <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
-                  <span class="products-num">3</span>
-                </a>
               </div>
-              <!-- /.link-group -->
-            </div>
-            <!-- /.col-md-2 -->
+              <!-- /.col-md-8 -->
+              <div class="col-md-2 col-sm-6">
+                <div class="link-group">
+                  <a href = "#" class="user-link primary-link">
+                    <img src="/images/img/user.svg" alt="Icon: User" class="js-svg-img user-icon">
+                    <span class="user-link-text">Войти</span>
+                  </a>
+                  <a href = "/cart.html" class="cart-link">
+                    <img src="/images/img/cart.svg" alt="Icon: Cart" class="js-svg-img">
+                    <span class="products-num">3</span>
+                  </a>
+                  <div class="header-burger">
+                    <span></span>
+                  </div>
+                  <!-- /.header-burger -->
+                </div>
+                <!-- /.link-group -->
+              </div>
+              <!-- /.col-md-3 -->
           </div>
         <!-- /.row -->
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.header-fixed -->
+      <!-- /.header-inner -->
     </header>
     <main>
       <div class="second-section-yellow product-yellow"></div>
@@ -152,7 +157,7 @@
     <footer class="footer">
       <div class="container footer-content">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2 ft-center">
           <div class="footer-logo">
             <a href="/" class="footer-logo-link"><img src="/images/img/logo-footer.png" alt="Logo: Jazz" class="footer-logo-image"></a>
             <div class="footer-logo-text">Jazz STORE - </br>Все лучшее людям!</div>
@@ -160,7 +165,7 @@
           <!-- /.footer-logo -->
         </div>
         <!-- /.col-md-2 -->
-        <div class="col-md-5">
+        <div class="col-md-5 ft-center">
           <div class="footer-information">
             <ul label="Информация" class="information">
               <li class="information-item"><a href="#" class="information-link">О нас</a></li>
@@ -176,7 +181,7 @@
           </div> 
         </div>
         <!-- /.col-md-5 -->
-        <div class="col-md-2">
+        <div class="col-md-2 ft-center">
             <div class="social-media">
               <div class="social-title">Социальные сети</div>
               <div class="social-media-links">
@@ -184,7 +189,7 @@
                   <img src="/images/img/yt.svg" alt="Icon: YouTube" class="js-svg-img">
                 </a>
                 <a href="#" class="social-media-link" target="_blank">
-                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="js-svg-img">
+                  <img src="/images/img/inst.svg" alt="Icon: Instagram" class="js-svg-img">                  
                 </a>
               </div>
             </div>
@@ -195,8 +200,8 @@
           <div class="phone">
             <div class="phone-title">Контакты</div>
             <div class="phone-nums">
-              <a href="tel: 88008989889" class="phone-num">8 800 898 98 89,</a>
-              <a href="tel: +74998989889" class="phone-num">&nbsp +7 499 989 98 89</a>
+              <a href="tel: +78008989889" class="phone-num">+7 800 898 98 89,</a>
+              <a href="tel: +74998989889" class="phone-num">+7 499 989 98 89</a>
             </div>
             <!-- /.phone-nums -->
           </div>
