--- a/index.html
+++ b/index.html
@@ -581,12 +581,11 @@
             <!-- /.col-md-4 -->
             <div class="col-md-4">
               <img src="images/img/logo-lg.png" alt="Logo: Jazz" class="logo-lg">
-              <div class="reliability-card reliability-card-right">
+              <div class="reliability-card reliability-card-right rel-card">
                 <div class="reliability-card-text order-2">Защита от любых мошеннических действий</div>
                   <img src="/images/img/tick.svg" alt="Icon: tick" class="js-svg-img business-tip-icon order-1">
               </div>
               <!-- /.reliability-card -->
-              <a href="#" class="reliability-link primary-link">Присоединиться</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
@@ -604,6 +603,7 @@
               <!-- /.reliability-card -->
             </div>
             <!-- /.col-md-4 -->
+            <a href="#" class="reliability-link primary-link">Присоединиться</a>
           </div>
           <!-- /.row -->
         </div>
